# YepClock

./: .gitignore  CMakeLists.txt  README.md
src/: clockwindow.cpp  clockwindow.h  fontbitmap.cpp  fontbitmap.h  main.cpp
